--- a/tabs.html
+++ b/tabs.html
@@ -29,7 +29,7 @@
             <option value="https://www.wolframalpha.com">Wolfram</option>
             <option value="https://netquake.io">Quake</option>
             <option value="https://krunker.io">Krunker</option>
-            <option value="https://instant.io">File Transfer</option>
+            <option value="https://chidokun.github.io/p2p-file-transfer">File Transfer</option>
         </select>
         <b style="color:white" title="Only iframe-compatible sites available">tab</b>
     </div>
