updated using github-explorer

--- a/html/sanity6.html
+++ b/html/sanity6.html
@@ -37,7 +37,7 @@
               type: 'publicData',
               key,
             });
-            return data[0]?.value[key];
+            return data[0]?.value; //[key];
           },
 
           //async setItem(key, value) {
