--- a/html/sanity6.html
+++ b/html/sanity6.html
@@ -21,73 +21,54 @@
     
     <script src="https://unpkg.com/@sanity/client/umd/sanityClient.js"></script>
     <script>
-    	const { createClient } = SanityClient;
+const { createClient } = SanityClient;
 
-        const client = createClient({
-          projectId: 'b3rj1ubh',
-          dataset: 'production',
-          token: 'skOzyD4VViJ88amMAqteATe2ebZRfoPsHN4U9u1bvC6a1swtKvSKqe25j2D96wKrB3TVnz7cLHR3Mkld5dyeDKw3HE9s0kcTDTcwsO1qKv6hMHUSoS9yOMkfevPS7vMxW1gqA2kXLzBAPoO4NiNqQ1OofngwJIVfkdN9UgE2TaYBltmLUVJw',
-          useCdn: true,
-          apiVersion: '2023-05-03',
-        });
+const client = createClient({
+  projectId: 'b3rj1ubh',
+  dataset: 'production',
+  token: 'skOzyD4VViJ88amMAqteATe2ebZRfoPsHN4U9u1bvC6a1swtKvSKqe25j2D96wKrB3TVnz7cLHR3Mkld5dyeDKw3HE9s0kcTDTcwsO1qKv6hMHUSoS9yOMkfevPS7vMxW1gqA2kXLzBAPoO4NiNqQ1OofngwJIVfkdN9UgE2TaYBltmLUVJw',
+  useCdn: true,
+  apiVersion: '2023-05-03',
+});
 
-        const publicStorage = {
-          async getItem(key) {
-            const data = await client.fetch('*[_type == $type && key == $key]', {
-              type: 'publicData',
-              key,
-            });
-            return data[0]?.value; //[key];
-          },
-
-          //async setItem(key, value) {
-          //  const newData = {
-          //    _type: 'publicData',
-          //    key,
-          //    value,
-          //  };
-          //  await client.create(newData);
-          //},
-async setItem(key, value) {
-  const data = await client.fetch('*[_type == $type && key == $key]', {
-    type: 'publicData',
-    key,
-  });
-  if (data[0]) {
-    await client
-      .patch(data[0]._id)
-      .set({ value })
-      .commit();
-  } else {
-    const newData = {
-      _type: 'publicData',
+const publicStorage = {
+  async getItem(key) {
+    const data = await client.fetch('*[_type == $type && key == $key]', {
+      type: 'publicData',
       key,
-      value,
-    };
-    await client.create(newData);
+    });
+    return data[0]?.value;
+  },
+
+  async setItem(key, value) {
+    const data = await client.fetch('*[_type == $type && key == $key]', {
+      type: 'publicData',
+      key,
+    });
+    const action = data[0]
+      ? client.patch(data[0]._id).set({ value })
+      : client.create({ _type: 'publicData', key, value });
+    await client.transaction().createIfNotExists({ _id: `publicData.${key}` }).commit();
+    await client.transaction().patch(`publicData.${key}`).createOrReplace(action).commit();
+  },
+
+  async removeItem(key) {
+    const data = await client.fetch('*[_type == $type && key == $key]', {
+      type: 'publicData',
+      key,
+    });
+    if (data[0]) {
+      await client.transaction().delete(data[0]._id).commit();
+    }
+  },
+
+  async getAllKeys() {
+    const data = await client.fetch('*[_type == $type]', {
+      type: 'publicData',
+    });
+    return data.map(item => item.key);
   }
-},
-
-
-          async removeItem(key) {
-            const data = await client.fetch('*[_type == $type && key == $key]', {
-              type: 'publicData',
-              key,
-            });
-            if (data[0]) {
-              //await client.patch(data[0]._id).unset([`value.${key}`]).commit();
-                const docId = data[0]._id;
-                await client.delete(docId);
-            }
-          },
-
-          async getAllKeys() {
-            const data = await client.fetch('*[_type == $type]', {
-              type: 'publicData',
-            });
-            return data.map(item => item.key);
-          }
-        };
+};
     </script>
     <script>
       const setDataButton = document.getElementById('setData');
