--- a/html/sanity6.html
+++ b/html/sanity6.html
@@ -46,8 +46,9 @@ const publicStorage = {
       key,
     });
     const action = data[0]
-      ? client.patch(data[0]._id).set({ value })
-      : client.create({ _type: 'publicData', key, value });
+      ? client.patch(data[0]._id).set({ _type: 'publicData', value }) // add _type
+      : client.create({ _type: 'publicData', key, value }); // add _type
+
     await client.transaction().createIfNotExists({ _id: `publicData.${key}` }).commit();
     await client.transaction().patch(`publicData.${key}`).createOrReplace(action).commit();
   },
