updated using github-explorer

--- a/html/sanity6.html
+++ b/html/sanity6.html
@@ -54,12 +54,13 @@ const publicStorage = {
       _type: 'publicData', // Add _type field
     }).commit();
 
-    await client.transaction().patch(`publicData.${key}`).createOrReplace(action).commit();
+    //await client.transaction().patch(`publicData.${key}`).createOrReplace(action).commit();
 
-  //await client.transaction().patch(`publicData.${key}`).createOrReplace({
-  //  ...action,
-  //  _type: 'publicData', // Add _type field
-  //}).commit();
+    await client.transaction().patch(`publicData.${key}`).createOrReplace({
+      ...action,
+      _type: 'publicData',
+      _id: `publicData.${key}`,
+    }).commit();
 
   },
 
