--- a/html/peerjs-cam-fb7.html
+++ b/html/peerjs-cam-fb7.html
@@ -29,7 +29,7 @@
       const clearAllButton = document.getElementById('clear-all');
 
       // Display own peer ID
-      peer.on('open', id => {
+      peer.on('open', (id) => {
         myIdSpan.innerText = id;
         dbRef.onDisconnect().remove();
         dbRef.push(id);
@@ -39,8 +39,8 @@
       // Remove own peer ID from Firebase database on disconnect
       peer.on('close', () => {
         dbRef.once('value')
-          .then(snapshot => {
-            snapshot.forEach(childSnapshot => {
+          .then((snapshot) => {
+            snapshot.forEach((childSnapshot) => {
               const key = childSnapshot.key;
               const value = childSnapshot.val();
               if (value === peer.id) {
@@ -48,16 +48,17 @@
               }
             });
           })
-          .catch(error => console.error(error));
+          .catch((error) => console.error(error));
       });
 
       // Show all peers in the Firebase database
-      let timeoutId;
+      let timeoutId = null;
       let callInProgress = false;
+      let currentCall = null;
       function showAllPeers() {
         if (callInProgress) return;
         dbRef.once('value')
-          .then(snapshot => {
+          .then((snapshot) => {
             const peersDiv = document.getElementById('peers');
             peersDiv.innerHTML = '';
             peersDiv.appendChild(document.createElement('hr'));
@@ -71,14 +72,15 @@
 
             // Check if already in a call
             let inCall = false;
-            peer.on('call', call => {
+            peer.on('call', (call) => {
               if (inCall) {
                 call.answer();
                 return;
               }
 
               inCall = true;
-              call.on('stream', remoteStream => {
+              currentCall = call;
+              call.on('stream', (remoteStream) => {
                 callInProgress = true;
                 const video = document.createElement('video');
                 video.srcObject = remoteStream;
@@ -90,7 +92,8 @@
               hangUpButton.innerText = 'Hang Up';
               hangUpButton.onclick = () => {
                 callInProgress = false;
-                call.close();
+                currentCall.close();
+                currentCall = null;
                 timeoutId = setTimeout(() => {showAllPeers();}, 5000);
               };
               peersDiv.appendChild(hangUpButton);
@@ -100,7 +103,7 @@
             });
 
             // Create Call and Answer buttons for each peer ID except own
-            snapshot.forEach(childSnapshot => {
+            snapshot.forEach((childSnapshot) => {
               const key = childSnapshot.key;
               const value = childSnapshot.val();
               if (value === peer.id) return;
@@ -112,10 +115,11 @@
                 callInProgress = true;
                 clearTimeout(timeoutId);
                 navigator.mediaDevices.getUserMedia({video: true, audio: true})
-                  .then(stream => {
+                  .then((stream) => {
                     inCall = true;
                     const call = peer.call(value, stream);
-                    call.on('stream', remoteStream => {
+                    currentCall = call;
+                    call.on('stream', (remoteStream) => {
                       callInProgress = true;
                       const video = document.createElement('video');
                       video.srcObject = remoteStream;
@@ -125,7 +129,8 @@
                       hangUpButton.innerText = 'Hang Up';
                       hangUpButton.onclick = () => {
                         callInProgress = false;
-                        call.close();
+                        currentCall.close();
+                        currentCall = null;
                         timeoutId = setTimeout(() => {showAllPeers();}, 5000);
                       };
                       peersDiv.appendChild(hangUpButton);
@@ -134,14 +139,14 @@
                       }
                     });
                   })
-                  .catch(error => console.error(error));
+                  .catch((error) => console.error(error));
               };
 
               const buttonsDiv = document.createElement('div');
               buttonsDiv.appendChild(callButton);
 
               // Display Answer button only when receiving a call from that peer
-              peer.on('call', call => {
+              peer.on('call', (call) => {
                 if (call.peer === value) {
                   const answerButton = document.createElement('button');
                   answerButton.innerText = `Answer ${value}`;
@@ -150,10 +155,11 @@
                     callInProgress = true;
                     clearTimeout(timeoutId);
                     navigator.mediaDevices.getUserMedia({video: true, audio: true})
-                      .then(stream => {
+                      .then((stream) => {
                         inCall = true;
+                        currentCall = call;
                         call.answer(stream);
-                        call.on('stream', remoteStream => {
+                        call.on('stream', (remoteStream) => {
                           callInProgress = true;
                           const video = document.createElement('video');
                           video.srcObject = remoteStream;
@@ -163,7 +169,8 @@
                           hangUpButton.innerText = 'Hang Up';
                           hangUpButton.onclick = () => {
                             callInProgress = false;
-                            call.close();
+                            currentCall.close();
+                            currentCall = null;
                             timeoutId = setTimeout(() => {showAllPeers();}, 5000);
                           };
                           peersDiv.appendChild(hangUpButton);
@@ -172,7 +179,7 @@
                           }
                         });
                       })
-                      .catch(error => console.error(error));
+                      .catch((error) => console.error(error));
                   };
                   buttonsDiv.appendChild(answerButton);
                 }
@@ -183,11 +190,11 @@
             });
 
             // Set the timer to refresh the list of peers every 5 seconds
-            if (!callInProgress && timeoutId !== null) {
+            if (!callInProgress && timeoutId === null) {
               timeoutId = setTimeout(() => {showAllPeers();}, 5000);
             }
           })
-          .catch(error => console.error(error));
+          .catch((error) => console.error(error));
       }
 
       // Clear all peers from the Firebase database
