--- a/html/peerjs-cam-fb7.html
+++ b/html/peerjs-cam-fb7.html
@@ -1,5 +1,7 @@
 <!-- https://jay23606.github.io/chat-gpt-voice/html/peerjs-cam-fb7.html -->
+It's possible that the video elements are not being appended to the DOM correctly. Here's a modified version of the code that uses a `videoGrid` element to hold the video elements, and appends the video elements to the `videoGrid` element instead of the `peers` element:
 
+```
 <!DOCTYPE html>
 <html>
   <head>
@@ -11,6 +13,7 @@
       <h3>My PeerJS ID: <span id="my-id"></span></h3>
       <button id="clear-all">Clear All Peers</button>
     </div>
+    <div id="video-grid"></div>
     
     <script src="https://unpkg.com/peerjs@1.4.7/dist/peerjs.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
@@ -27,6 +30,7 @@
       const peer = new Peer();
       const myIdSpan = document.getElementById('my-id');
       const clearAllButton = document.getElementById('clear-all');
+      const videoGrid = document.getElementById('video-grid');
 
       // Display own peer ID
       peer.on('open', (id) => {
@@ -85,7 +89,7 @@
                 const video = document.createElement('video');
                 video.srcObject = remoteStream;
                 video.autoplay = true;
-                peersDiv.appendChild(video);
+                videoGrid.appendChild(video);
               });
 
               const hangUpButton = document.createElement('button');
@@ -104,105 +108,4 @@
 
             // Create Call and Answer buttons for each peer ID except own
             snapshot.forEach((childSnapshot) => {
-              const key = childSnapshot.key;
-              const value = childSnapshot.val();
-              if (value === peer.id) return;
-
-              const callButton = document.createElement('button');
-              callButton.innerText = `Call ${value}`;
-              callButton.onclick = () => {
-                if (callInProgress) return;
-                callInProgress = true;
-                clearTimeout(timeoutId);
-                navigator.mediaDevices.getUserMedia({video: true, audio: true})
-                  .then((stream) => {
-                    inCall = true;
-                    const call = peer.call(value, stream);
-                    currentCall = call;
-                    call.on('stream', (remoteStream) => {
-                      callInProgress = true;
-                      const video = document.createElement('video');
-                      video.srcObject = remoteStream;
-                      video.autoplay = true;
-                      peersDiv.appendChild(video);
-                      const hangUpButton = document.createElement('button');
-                      hangUpButton.innerText = 'Hang Up';
-                      hangUpButton.onclick = () => {
-                        callInProgress = false;
-                        currentCall.close();
-                        currentCall = null;
-                        timeoutId = setTimeout(() => {showAllPeers();}, 5000);
-                      };
-                      peersDiv.appendChild(hangUpButton);
-                      if (callInProgress) {
-                        callInProgress = false;
-                      }
-                    });
-                  })
-                  .catch((error) => console.error(error));
-              };
-
-              const buttonsDiv = document.createElement('div');
-              buttonsDiv.appendChild(callButton);
-
-              // Display Answer button only when receiving a call from that peer
-              peer.on('call', (call) => {
-                if (call.peer === value) {
-                  const answerButton = document.createElement('button');
-                  answerButton.innerText = `Answer ${value}`;
-                  answerButton.onclick = () => {
-                    if (callInProgress) return;
-                    callInProgress = true;
-                    clearTimeout(timeoutId);
-                    navigator.mediaDevices.getUserMedia({video: true, audio: true})
-                      .then((stream) => {
-                        inCall = true;
-                        currentCall = call;
-                        call.answer(stream);
-                        call.on('stream', (remoteStream) => {
-                          callInProgress = true;
-                          const video = document.createElement('video');
-                          video.srcObject = remoteStream;
-                          video.autoplay = true;
-                          peersDiv.appendChild(video);
-                          const hangUpButton = document.createElement('button');
-                          hangUpButton.innerText = 'Hang Up';
-                          hangUpButton.onclick = () => {
-                            callInProgress = false;
-                            currentCall.close();
-                            currentCall = null;
-                            timeoutId = setTimeout(() => {showAllPeers();}, 5000);
-                          };
-                          peersDiv.appendChild(hangUpButton);
-                          if (callInProgress) {
-                            callInProgress = false;
-                          }
-                        });
-                      })
-                      .catch((error) => console.error(error));
-                  };
-                  buttonsDiv.appendChild(answerButton);
-                }
-              });
-
-              peersDiv.appendChild(buttonsDiv);
-              peersDiv.appendChild(document.createElement('br'));
-            });
-
-            // Set the timer to refresh the list of peers every 5 seconds
-            if (!callInProgress && timeoutId === null) {
-              timeoutId = setTimeout(() => {showAllPeers();}, 5000);
-            }
-          })
-          .catch((error) => console.error(error));
-      }
-
-      // Clear all peers from the Firebase database
-      clearAllButton.addEventListener('click', () => {
-        dbRef.remove();
-        const peersDiv = document.getElementById('peers');
-        peersDiv.innerHTML = '';
-      });
-    </script>
-  </body>
-</html>
+              const key = childSnapshot.key
