--- a/html/peerjs-cam-fb7.html
+++ b/html/peerjs-cam-fb7.html
@@ -1,7 +1,4 @@
 <!-- https://jay23606.github.io/chat-gpt-voice/html/peerjs-cam-fb7.html -->
-It's possible that the video elements are not being appended to the DOM correctly. Here's a modified version of the code that uses a `videoGrid` element to hold the video elements, and appends the video elements to the `videoGrid` element instead of the `peers` element:
-
-```
 <!DOCTYPE html>
 <html>
   <head>
@@ -14,7 +11,7 @@ It's possible that the video elements are not being appended to the DOM correctl
       <button id="clear-all">Clear All Peers</button>
     </div>
     <div id="video-grid"></div>
-    
+
     <script src="https://unpkg.com/peerjs@1.4.7/dist/peerjs.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-database.js"></script>
@@ -31,34 +28,10 @@ It's possible that the video elements are not being appended to the DOM correctl
       const myIdSpan = document.getElementById('my-id');
       const clearAllButton = document.getElementById('clear-all');
       const videoGrid = document.getElementById('video-grid');
-
-      // Display own peer ID
-      peer.on('open', (id) => {
-        myIdSpan.innerText = id;
-        dbRef.onDisconnect().remove();
-        dbRef.push(id);
-        showAllPeers();
-      });
-
-      // Remove own peer ID from Firebase database on disconnect
-      peer.on('close', () => {
-        dbRef.once('value')
-          .then((snapshot) => {
-            snapshot.forEach((childSnapshot) => {
-              const key = childSnapshot.key;
-              const value = childSnapshot.val();
-              if (value === peer.id) {
-                dbRef.child(key).remove();
-              }
-            });
-          })
-          .catch((error) => console.error(error));
-      });
-
-      // Show all peers in the Firebase database
       let timeoutId = null;
       let callInProgress = false;
       let currentCall = null;
+
       function showAllPeers() {
         if (callInProgress) return;
         dbRef.once('value')
@@ -76,6 +49,7 @@ It's possible that the video elements are not being appended to the DOM correctl
 
             // Check if already in a call
             let inCall = false;
+            
             peer.on('call', (call) => {
               if (inCall) {
                 call.answer();
@@ -85,11 +59,13 @@ It's possible that the video elements are not being appended to the DOM correctl
               inCall = true;
               currentCall = call;
               call.on('stream', (remoteStream) => {
-                callInProgress = true;
-                const video = document.createElement('video');
-                video.srcObject = remoteStream;
-                video.autoplay = true;
-                videoGrid.appendChild(video);
+                if (!callInProgress) {
+                  callInProgress = true;
+                  const video = document.createElement('video');
+                  video.srcObject = remoteStream;
+                  video.autoplay = true;
+                  videoGrid.appendChild(video);
+                }
               });
 
               const hangUpButton = document.createElement('button');
@@ -108,4 +84,52 @@ It's possible that the video elements are not being appended to the DOM correctl
 
             // Create Call and Answer buttons for each peer ID except own
             snapshot.forEach((childSnapshot) => {
-              const key = childSnapshot.key
+              const key = childSnapshot.key;
+              const value = childSnapshot.val();
+              if (value !== peer.id) {
+                const callButton = document.createElement('button');
+                callButton.innerText = `Call ${value}`;
+                callButton.onclick = () => {
+                  const call = peer.call(value);
+                  call.on('stream', (remoteStream) => {
+                    if (!callInProgress) {
+                      callInProgress = true;
+                      const video = document.createElement('video');
+                      video.srcObject = remoteStream;
+                      video.autoplay = true;
+                      videoGrid.appendChild(video);
+                    }
+                  });
+
+                  const hangUpButton = document.createElement('button');
+                  hangUpButton.innerText = 'Hang Up';
+                  hangUpButton.onclick = () => {
+                    callInProgress = false;
+                    call.close();
+                    timeoutId = setTimeout(() => {showAllPeers();}, 5000);
+                  };
+                  peersDiv.appendChild(hangUpButton);
+                  if (callInProgress) {
+                    callInProgress = false;
+                  }
+                };
+                peersDiv.appendChild(callButton);
+              }
+            });
+            timeoutId = setTimeout(() => {showAllPeers();}, 5000);
+          })
+          .catch((error) => console.error(error));
+      }
+
+      clearAllButton.onclick = () => {
+        dbRef.remove();
+        clearTimeout(timeoutId);
+        callInProgress = false;
+        currentCall?.close();
+        currentCall = null;
+        videoGrid.innerHTML = '';
+        showAllPeers();
+      };
+    </script>
+  </body>
+</html>
