--- a/html/peerjs-cam-fb7.html
+++ b/html/peerjs-cam-fb7.html
@@ -1,5 +1,4 @@
 <!-- https://jay23606.github.io/chat-gpt-voice/html/peerjs-cam-fb7.html -->
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -11,40 +10,45 @@
       <h3>My PeerJS ID: <span id="my-id"></span></h3>
       <button id="clear-all">Clear All Peers</button>
     </div>
-    <div id="video-grid"></div>
-
+    
     <script src="https://unpkg.com/peerjs@1.4.7/dist/peerjs.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-database.js"></script>
     <script>
-      // Initialize Firebase
-      const firebaseConfig = {
-        databaseURL: "https://jabdal-default-rtdb.firebaseio.com"
-      };
+      const firebaseConfig = { databaseURL: "https://jabdal-default-rtdb.firebaseio.com" };
       firebase.initializeApp(firebaseConfig);
       const dbRef = firebase.database().ref('peers');
 
-      // Initialize PeerJS
       const peer = new Peer();
+      const myIdSpan = document.getElementById('my-id');
       const clearAllButton = document.getElementById('clear-all');
       const videoGrid = document.getElementById('video-grid');
-      let timeoutId = null;
-      let callInProgress = false;
       let currentCall = null;
+      let inCall = false;
+      let callInProgress = false;
+      let refreshTimeoutId = null;
+      const callTimeout = 60000;
 
-      const myIdDiv = () => {
-        const myIdSpan = document.createElement('span');
-        myIdSpan.id = 'my-id';
-        myIdSpan.innerText = peer.id;
+      peer.on('open', (id) => {
+        myIdSpan.innerText = id;
+        dbRef.onDisconnect().remove();
+        dbRef.push(id);
+        refreshPeers();
+      });
 
-        const myIdH3 = document.createElement('h3');
-        myIdH3.innerText = 'My PeerJS ID: ';
-        myIdH3.appendChild(myIdSpan);
+      peer.on('close', () => {
+        dbRef.once('value')
+          .then((snapshot) => {
+            snapshot.forEach((childSnapshot) => {
+              const key = childSnapshot.key;
+              const value = childSnapshot.val();
+              if (value === peer.id) dbRef.child(key).remove();
+            });
+          })
+          .catch((error) => console.error(error));
+      });
 
-        return myIdH3;
-      }
-
-      const showAllPeers = () => {
+      const refreshPeers = () => {
         if (callInProgress) return;
         dbRef.once('value')
           .then((snapshot) => {
@@ -53,93 +57,124 @@
             peersDiv.appendChild(document.createElement('hr'));
             peersDiv.appendChild(document.createElement('br'));
 
-            // Add own PeerJS ID to the top of the list
-            peersDiv.appendChild(myIdDiv());
+            const myIdDiv = document.createElement('div');
+            myIdDiv.innerText = `My ID: ${peer.id}`;
+            peersDiv.appendChild(myIdDiv);
             peersDiv.appendChild(document.createElement('br'));
 
-            // Check if already in a call
-            let inCall = false;
-            
-            peer.on('call', (call) => {
-              if (inCall) {
-                call.answer();
-                return;
-              }
+            if (currentCall !== null && Date.now() - currentCall.startTime >= callTimeout) {
+              hangUp();
+              return;
+            }
 
-              inCall = true;
-              currentCall = call;
-              call.on('stream', (remoteStream) => {
-                if (!callInProgress) {
-                  callInProgress = true;
-                  const video = document.createElement('video');
-                  video.srcObject = remoteStream;
-                  video.autoplay = true;
-                  videoGrid.appendChild(video);
-                }
-              });
-
-              const hangUpButton = document.createElement('button');
-              hangUpButton.innerText = 'Hang Up';
-              hangUpButton.onclick = () => {
-                callInProgress = false;
-                currentCall.close();
-                currentCall = null;
-                timeoutId = setTimeout(() => {showAllPeers();}, 5000);
-              };
-              peersDiv.appendChild(hangUpButton);
-              if (callInProgress) {
-                callInProgress = false;
-              }
-            });
-
-            // Create Call and Answer buttons for each peer ID except own
             snapshot.forEach((childSnapshot) => {
               const key = childSnapshot.key;
               const value = childSnapshot.val();
-              if (value !== peer.id) {
-                const callButton = document.createElement('button');
-                callButton.innerText = `Call ${value}`;
-                callButton.onclick = () => {
-                  const call = peer.call(value);
-                  call.on('stream', (remoteStream) => {
-                    if (!callInProgress) {
+              if (value === peer.id) return;
+
+              const callButton = document.createElement('button');
+              callButton.innerText = `Call ${value}`;
+              callButton.addEventListener('click', () => {
+                if (callInProgress) return;
+                callInProgress = true;
+                clearTimeout(refreshTimeoutId);
+                navigator.mediaDevices.getUserMedia({ video: true, audio: true })
+                  .then((stream) => {
+                    inCall = true;
+                    currentCall = peer.call(value, stream);
+                    currentCall.startTime = Date.now();
+                    currentCall.on('stream', (remoteStream) => {
                       callInProgress = true;
                       const video = document.createElement('video');
                       video.srcObject = remoteStream;
                       video.autoplay = true;
                       videoGrid.appendChild(video);
-                    }
-                  });
+                    });
+                    currentCall.on('close', () => {
+                      inCall = false;
+                      callInProgress = false;
+                      currentCall = null;
+                      refreshPeers();
+                    });
+                    const hangUpButton = document.createElement('button');
+                    hangUpButton.innerText = 'Hang Up';
+                    hangUpButton.addEventListener('click', () => {
+                      hangUp();
+                    });
+                    peersDiv.appendChild(hangUpButton);
+                  })
+                  .catch((error) => console.error(error));
+              });
 
-                  const hangUpButton = document.createElement('button');
-                  hangUpButton.innerText = 'Hang Up';
-                  hangUpButton.onclick = () => {
-                    callInProgress = false;
-                    call.close();
-                    timeoutId = setTimeout(() => {showAllPeers();}, 5000);
-                  };
-                  peersDiv.appendChild(hangUpButton);
-                  if (callInProgress) {
-                    callInProgress = false;
-                  }
-                };
-                peersDiv.appendChild(callButton);
-              }
+              const buttonsDiv = document.createElement('div');
+              buttonsDiv.appendChild(callButton);
+
+              peer.on('call', (call) => {
+                if (call.peer === value) {
+                  const answerButton = document.createElement('button');
+                  answerButton.innerText = `Answer ${value}`;
+                  answerButton.addEventListener('click', () => {
+                    if (callInProgress) return;
+                    callInProgress = true;
+                    clearTimeout(refreshTimeoutId);
+                    navigator.mediaDevices.getUserMedia({ video: true, audio: true })
+                      .then((stream) => {
+                        inCall = true;
+                        currentCall = call;
+                        currentCall.answer(stream);
+                        currentCall.startTime = Date.now();
+                        currentCall.on('stream', (remoteStream) => {
+                          callInProgress = true;
+                          const video = document.createElement('video');
+                          video.srcObject = remoteStream;
+                          video.autoplay = true;
+                          videoGrid.appendChild(video);
+                        });
+                        currentCall.on('close', () => {
+                          inCall = false;
+                          callInProgress = false;
+                          currentCall = null;
+                          refreshPeers();
+                        });
+                        const hangUpButton = document.createElement('button');
+                        hangUpButton.innerText = 'Hang Up';
+                        hangUpButton.addEventListener('click', () => {
+                          hangUp();
+                        });
+                        peersDiv.appendChild(hangUpButton);
+                      })
+                      .catch((error) => console.error(error));
+                  });
+                  buttonsDiv.appendChild(answerButton);
+                }
+              });
+
+              peersDiv.appendChild(buttonsDiv);
+              peersDiv.appendChild(document.createElement('br'));
             });
-            timeoutId = setTimeout(() => {showAllPeers();}, 5000);
+
+            if (!callInProgress && refreshTimeoutId === null) {
+              refreshTimeoutId = setTimeout(() => {
+                refreshPeers();
+              }, 5000);
+            }
           })
           .catch((error) => console.error(error));
-      }
-
-      clearAllButton.onclick = () => {
-        dbRef.remove();
-        clearTimeout(timeoutId);
-        callInProgress = false;
-        currentCall?.close();
-        currentCall = null;
-        videoGrid.innerHTML = '';
-        showAllPeers();
       };
+
+      const hangUp = () => {
+        callInProgress = false;
+        currentCall.close();
+        currentCall = null;
+        inCall = false;
+        refreshPeers();
+      };
+
+      clearAllButton.addEventListener('click', () => {
+        dbRef.remove();
+        const peersDiv = document.getElementById('peers');
+        peersDiv.innerHTML = '';
+      });
     </script>
   </body>
 </html>
